--- a/project/src/airAsiaGo/res/values/strings.xml
+++ b/project/src/airAsiaGo/res/values/strings.xml
@@ -86,4 +86,6 @@
     <string name="dialog_message_launch_aag_mobile_site">Launch the AirAsiaGo mobile website?</string>
     <string name="sorry_rooms_sold_out_aag">Sorry, all rooms are sold out on AirAsiaGo.</string>
     <string name="share_template_long_ad_aag">Book hotels, flights and view &amp; share your itineraries. Download the free AirAsiaGo mobile app today.</string>
+    <!-- Label for Flight Search in task manager -->
+    <string name="Expedia_Flights">AirAsiaGo Flights</string>
 </resources>
