--- a/project/src/travelocity/res/values-fr-rCA/strings.xml
+++ b/project/src/travelocity/res/values-fr-rCA/strings.xml
@@ -79,4 +79,19 @@
     <string name="tell_a_friend_body_tvly">Bonjour,\n\nJetez un coup d’œil à l\&apos;application Travelocity Hotels pour téléphones iPhone et Android. Elle est gratuite et vous permet de chercher et de réserver des chambres dans plus de 140 000 hôtels dans le monde. C’est la façon la plus simple de réserver une chambre à partir de votre téléphone.</string>
     <string name="Travelocity_Flights">Vols Travelocity</string>
 
+    <string name="error_flight_no_longer_available_tvly">Désolé, le vol sélectionné n’est plus disponible sur Travelocity.</string>
+
+    <string name="error_flights_no_longer_available_tvly">Désolé, un des vols sélectionnés n’est plus disponible sur Travelocity.</string>
+
+    <!-- Message displayed when the hotel room is sold out -->
+    <string name="error_room_is_now_sold_out_tvly">Désolé, la chambre sélectionnée n’est plus disponible sur Travelocity.</string>
+    <!-- Message displayed when all the hotel rooms at a hotel are sold out -->
+    <string name="error_hotel_is_now_sold_out_tvly">Désolé, l’hôtel sélectionné n’est plus disponible sur Travelocity.</string>
+    <!--A message stating this hotel is Not currently available on Travelocity -->
+    <string name="not_currently_available_tvly">Non disponible présentement sur Travelocity</string>
+    <!-- A message stating this hotel is sold out on Travelocity -->
+    <string name="sold_out_on_tvly">Aucune disponibilité sur Travelocity</string>
+    <!-- Shown when a hotel is sold out for a generic set of dates.  %s is the set of dates, e.g. "Not available from Travelocity Nov. 3-4" -->
+    <string name="not_currently_available_tvly_TEMPLATE">Non disponible sur Travelocity %s</string>
+
 </resources>
