--- a/project/src/travelocity/res/values-fr/strings.xml
+++ b/project/src/travelocity/res/values-fr/strings.xml
@@ -85,4 +85,19 @@
     </string>
     <string name="Travelocity_Flights">Vols Travelocity</string>
 
+    <string name="error_flight_no_longer_available_tvly">Désolés, votre vol n’est plus disponible sur Travelocity.</string>
+
+    <string name="error_flights_no_longer_available_tvly">Désolés, un de vos vols n’est plus disponible sur Travelocity.</string>
+
+    <!-- Message displayed when the hotel room is sold out -->
+    <string name="error_room_is_now_sold_out_tvly">Désolés, cette chambre n’est plus disponible sur Travelocity.</string>
+    <!-- Message displayed when all the hotel rooms at a hotel are sold out -->
+    <string name="error_hotel_is_now_sold_out_tvly">Désolés, cet hôtel n’est plus disponible sur Travelocity.</string>
+    <!--A message stating this hotel is Not currently available on Travelocity -->
+    <string name="not_currently_available_tvly">Actuellement non disponible sur Travelocity</string>
+    <!-- A message stating this hotel is sold out on Travelocity -->
+    <string name="sold_out_on_tvly">Complet sur Travelocity</string>
+    <!-- Shown when a hotel is sold out for a generic set of dates.  %s is the set of dates, e.g. "Not available from Travelocity Nov. 3-4" -->
+    <string name="not_currently_available_tvly_TEMPLATE">Non disponible sur Travelocity %s</string>
+
 </resources>
