Put common content description on Launch hotels & flights button in Expedia and Travelocity app. Now we can click on launch buttons by content descption instead of resource Ids and reuse our existing pagemodel for Travelocity automation.

--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -2728,10 +2728,10 @@
 
     <!-- Content Description Labels -->
     <!-- Expedia Bookings Launch Screen -->
-    <!-- Content description for action: Press button to launch Expedia Hotels -->
-    <string name="cd_launch_hotels">Launch Expedia Hotels</string>
-    <!-- Content description for action: Press button to launch Expedia Flights -->
-    <string name="cd_launch_flights">Launch Expedia Flights</string>
+    <!-- Content description for action: Press button to launch Hotels -->
+    <string name="cd_launch_hotels">Launch Hotels</string>
+    <!-- Content description for action: Press button to launch Flights -->
+    <string name="cd_launch_flights">Launch Flights</string>
     <!-- Content description for action: Press button to open menu list -->
     <string name="cd_launch_open_menu_list">Open menu list</string>
     <!-- Content description for action: Open Settings Menu -->
